# scraping-wto

./: .gitignore  pyproject.toml  temp.py
config/: logging.toml
data/bronze/tl/: albania_DutyDetails_TL.txt  albania_TariffDetails_TL.txt  algeria_DutyDetails_TL.txt  angola_DutyDetails_TL.txt  angola_TariffDetails_TL.txt  antigua_and_barbuda_TariffDetails_TL.txt  argentina_DutyDetails_TL.txt  argentina_TariffDetails_TL.txt  armenia_DutyDetails_TL.txt  armenia_TariffDetails_TL.txt  australia_TariffDetails_TL.txt  bahamas_DutyDetails_TL.txt  bahamas_TariffDetails_TL.txt  bahrain_kingdom_of_DutyDetails_TL.txt  bahrain_kingdom_of_TariffDetails_TL.txt  bangladesh_TariffDetails_TL.txt  belarus_DutyDetails_TL.txt  belarus_TariffDetails_TL.txt  belize_TariffDetails_TL.txt  benin_DutyDetails_TL.txt  benin_TariffDetails_TL.txt  bhutan_DutyDetails_TL.txt  bhutan_TariffDetails_TL.txt  bolivia_plurinational_state_of_DutyDetails_TL.txt  bolivia_plurinational_state_of_TariffDetails_TL.txt  botswana_TariffDetails_TL.txt  brazil_DutyDetails_TL.txt  brazil_TariffDetails_TL.txt  brunei_darussalam_DutyDetails_TL.txt  brunei_darussalam_TariffDetails_TL.txt  bulgaria_TariffDetails_TL.txt  burkina_faso_DutyDetails_TL.txt  burkina_faso_TariffDetails_TL.txt  burundi_DutyDetails_TL.txt  burundi_TariffDetails_TL.txt  cabo_verde_DutyDetails_TL.txt  cabo_verde_TariffDetails_TL.txt  cabo_verde_TradeDetails_TL.txt  (+212 more)
log/: consultas_feitas.csv
scraping_wto/: controle_fluxo.py  empilha_trata.py  main.py  schemas.py  selenium_utils.py  utils.py  website_scraping.py
tests/: test_utils.py
